--- a/css/CodeX.css
+++ b/css/CodeX.css
@@ -308,7 +308,9 @@ body footer a:link:hover, footer a:visited:hover {
         margin-bottom: 5px;
     }
 
-    body header .headerBottom li, a, button{
+    body header .headerBottom li,
+    body header .headerBottom a,
+    body header .headerBottom button {
         font-size: 20px;
     }
     
@@ -411,7 +413,9 @@ body footer a:link:hover, footer a:visited:hover {
         margin-bottom: 5px;
     }
 
-    body header .headerBottom li, a, button{
+    body header .headerBottom li,
+    body header .headerBottom a,
+    body header .headerBottom button {
         font-size: 15px;
     }
     
